Major cleanup and docs overhaul
Clean up code across the board including style, minification, and
specifically java doc comments.

Adds in a LICENSE, stubs out a DEVELOPING.md guide as well.